--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-redirect-from
+include: [".well-known"]
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
